--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run build && mocha spec/integration",
+    "test": "npm run build && mocha test/integration",
     "build": "npm run build-cjs && npm run build-standalone",
     "build-standalone": "browserify index.js -s braintreereact -u react > dist/braintree-react.js",
     "build-cjs": "browserify index.js > dist/braintree-react-cjs.js",
