Eliminate standalone build

--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run build && mocha test/integration",
-    "build": "npm run build-cjs && npm run build-standalone",
-    "build-standalone": "browserify index.js -s braintreereact -u react > dist/braintree-react.js",
-    "build-cjs": "browserify index.js > dist/braintree-react-cjs.js",
+    "build": "browserify index.js > dist/braintree-react.js",
     "build-example": "browserify example.js > dist/example.js",
     "example": "npm run build-example && echo 'See http://localhost:8000/example.html - use number 4111111111111111 and any expiration date.' && python -m SimpleHTTPServer"
   },
